--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
-    background-color: #393939;
-    color: white;
+    background-color: #d9d9d8;
+    color: #4d4d4d;
+    font-size: 18px;
 }
+
