--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,13 +6,10 @@ header h1 {
 
 .shadow-custom {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  }
+}
 
 .gradient-text {
-  background: linear-gradient(to bottom, #ffffff, #424242);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .input-gradient {
